Remove ResetPassword page

--- a/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
@@ -15,8 +15,8 @@
       RenderOptions.EdgeMode="Aliased"
       UseLayoutRounding="True"
       SnapsToDevicePixels="True"
-      RenderOptions.BitmapScalingMode="NearestNeighbor"
-      >
+      RenderOptions.BitmapScalingMode="NearestNeighbor">
+    
     <Page.RenderTransform >
         <TranslateTransform x:Name="PageAxis"/>
     </Page.RenderTransform>
