--- a/PasswordManagerMainWindow/AuthenticationWindow/Themes/DarkTheme.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Themes/DarkTheme.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    >
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <SolidColorBrush x:Key="MainColor" Color="#2c2f33"></SolidColorBrush>
     <SolidColorBrush x:Key="TextColor" Color="White"/>
