--- a/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
@@ -15,8 +15,8 @@
       RenderOptions.EdgeMode="Aliased"
       UseLayoutRounding="True"
       SnapsToDevicePixels="True"
-      RenderOptions.BitmapScalingMode="NearestNeighbor"
-      >
+      RenderOptions.BitmapScalingMode="NearestNeighbor">
+    
     <Page.RenderTransform >
         <TranslateTransform x:Name="PageAxis"/>
     </Page.RenderTransform>
@@ -56,13 +56,13 @@
 
 
 
-        <DataGrid Grid.Row="4" x:Name="MainDataGrid" Style="{StaticResource DataGridStyle}" RowHeight="30"  ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"  RowStyle="{DynamicResource DataGridRowStyle}" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,10" ItemsSource="{Binding AuthenticationDataCollectionView}">
+        <DataGrid RenderOptions.EdgeMode="Aliased" Grid.Row="4" x:Name="MainDataGrid" Style="{StaticResource DataGridStyle}" RowHeight="30"  ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"  RowStyle="{DynamicResource DataGridRowStyle}" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,10" ItemsSource="{Binding AuthenticationDataCollectionView}">
             
             <DataGrid.Columns>
                 <DataGridTemplateColumn Width="30" CellStyle="{StaticResource NotSelectableColumnStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding Path = LogoPath}" Stretch="Fill"/>
+                            <Image Source="{Binding Path = LogoPath}" Stretch="Fill" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="NearestNeighbor" SnapsToDevicePixels="True"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
