--- a/PasswordManagerMainWindow/AuthenticationWindow/Styles/LoginPageStyles.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Styles/LoginPageStyles.xaml
@@ -189,11 +189,12 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style.Setters>
         <Style.Triggers>
-            <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="{DynamicResource SubmitButtonStyle.IsPressed.Background}"/>
-            </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Background" Value="{DynamicResource SubmitButtonStyle.IsMouseOver.Background}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="{DynamicResource SubmitButtonStyle.IsPressed.Background}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="{DynamicResource SubmitButtonStyle.IsEnabledFalse.Background}"/>
