--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Login.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Login.xaml
@@ -41,16 +41,16 @@
                    Grid.ColumnSpan="2"
                    Grid.RowSpan="2"
                    HorizontalAlignment="Right" 
-                   FontSize="14" Margin="0,32,20,32">
+                    Margin="0,32,20,32">
             <Hyperlink x:Name="CreateAccountHyperLink" 
                        NavigateUri="Signup.xaml" 
                        Foreground="#7289da"
                        FontFamily="Global Sans Serif" 
-                       FontWeight="Bold" 
-                       TextDecorations="{x:Null}">
+                       FontWeight="Bold"       
+                       FontSize="14"
+                       TextDecorations="None">
                 <Run Text="{x:Static res:Resources.CreateNewAccount}"/>
             </Hyperlink>
-
         </TextBlock>
 
         <TextBlock Text="{x:Static res:Resources.Greetings}"
@@ -103,7 +103,7 @@
                                         Grid.Column="1"                                       
                                         Height="40"           
                                         Visibility="Visible"
-                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox}"/>
+                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
 
         <TextBox x:Name="RevealedPasswordTextBox"  
                  Grid.Row="9" 
@@ -113,7 +113,7 @@
                  Padding="5,0,30,0"
                  Style="{StaticResource EmailTextBoxStyle}"   
                  Text="{Binding Password, ElementName=HiddenPasswordTextBox}" 
-                 TextChanged="KindaPassword_TextChanged"/>
+                 TextChanged="RevealedPassword_TextChanged"/>
 
         <ToggleButton x:Name="ShowPasswordToggleButton"
                       Grid.Row="9" 
