--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
@@ -113,7 +113,7 @@
                                         Grid.Column="1" 
                                         Height="40"                
                                         Visibility="Visible"
-                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox}"/>
+                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
 
         <TextBox x:Name="RevealedPasswordTextBox" 
                  Grid.Row="9" 
