settings page base added

--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Login.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Login.xaml
@@ -87,7 +87,7 @@
                  Grid.Column="1" 
                  BorderThickness="2" 
                  Height="40"
-                 Style="{StaticResource EmailTextBoxStyle}"/>
+                 Style="{StaticResource PrimaryTextBoxStyle}"/>
 
         <TextBlock Text="{x:Static res:Resources.Password}"
                    Grid.Column="1"
@@ -111,7 +111,7 @@
                  Height="40"        
                  Visibility="Collapsed"
                  Padding="5,0,30,0"
-                 Style="{StaticResource EmailTextBoxStyle}"   
+                 Style="{StaticResource PrimaryTextBoxStyle}"   
                  Text="{Binding Password, ElementName=HiddenPasswordTextBox}" 
                  TextChanged="RevealedPassword_TextChanged"/>
 
@@ -128,6 +128,7 @@
         <TextBlock x:Name="AuthErrorTextBlock" 
                    Grid.Row="10" 
                    Grid.Column="1" 
+                   Margin="0,15,0,0"
                    Style="{StaticResource AuthErrorTextBlockStyle}"/>
 
         <CheckBox x:Name="RememberMeCheckBox" 
