--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/EmailConfirmation.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/EmailConfirmation.xaml
@@ -47,7 +47,7 @@
                  Grid.Column="1" 
                  BorderThickness="2" 
                  Height="40"
-                 Style="{StaticResource EmailTextBoxStyle}"/>
+                 Style="{StaticResource PrimaryTextBoxStyle}"/>
 
         <TextBlock x:Name="ErrorTextBlock" 
                    Grid.Row="6"
