--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
@@ -94,7 +94,7 @@
                  Grid.Column="1"
                  BorderThickness="2"                 
                 
-                 Style="{StaticResource EmailTextBoxStyle}" 
+                 Style="{StaticResource PrimaryTextBoxStyle}" 
                  TextChanged="EmailTextBox_TextChanged"
                  Height="40"  
                  />
@@ -121,7 +121,7 @@
                  Height="40"        
                  Visibility="Collapsed"
                  Padding="5,0,30,0"
-                 Style="{StaticResource EmailTextBoxStyle}"   
+                 Style="{StaticResource PrimaryTextBoxStyle}"   
                  Text="{Binding Password, ElementName=HiddenPasswordTextBox}" 
                  TextChanged="KindaPassword_TextChanged"/>
 
@@ -161,6 +161,7 @@
                        HorizontalAlignment="Center"
                        Margin="0,5,0,0"
                        FontSize="14"
+                       FontFamily="Global Sans Serif"
                        Width="205" 
                        TextAlignment="Center"/>
         </StackPanel>
@@ -178,6 +179,7 @@
                 Content="{x:Static res:Resources.SignUp}"
                 Width="160"
                 Height="50"  
+                HorizontalAlignment="Left"
                 Style="{StaticResource SubmitButtonStyle}" 
                 Click="SubmitButton_Click"/>
 
