Add service crypto to user class

--- a/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
@@ -35,7 +35,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
