--- a/PasswordManagerMainWindow/MainWindow/Themes/LightTheme.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Themes/LightTheme.xaml
@@ -100,4 +100,17 @@
     <ImageSource x:Key="OpenEye">/MainWindow/Assets/eye.png</ImageSource>
 
     <Color x:Key="SettingsListView.Background">White</Color>
+    <Color x:Key="SettingsListViewItem.Static.Background">White</Color>
+
+    <Color x:Key="SettingComboBox.Background">White</Color>
+    <Color x:Key="SettingComboBox.BorderBrush.Static">LightGray</Color>
+    <Color x:Key="SettingComboBox.BorderBrush.Checked">#7289da</Color>
+    <Color x:Key="SettingComboBox.Glyph.Static">LightGray</Color>
+    <Color x:Key="SettingComboBox.Glyph.Checked">#7289da</Color>
+    <Color x:Key="SettingComboBoxItem.IsHighlighted.Background">#d5d5d6</Color>
+    <Color x:Key="SettingComboBoxItem.Static.Background">White</Color>
+
+    <Color x:Key="SettingToggleButton.BackRectangle.Background.Unchecked">#d5d5d6</Color>
+    <Color x:Key="SettingToggleButton.BackRectangle.Background.Checked">#7289da</Color>
+    <Color x:Key="SettingToggleButton.FrontRectangle.Background">White</Color>
 </ResourceDictionary>
