--- a/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
@@ -15,8 +15,9 @@
       RenderOptions.EdgeMode="Aliased"
       UseLayoutRounding="True"
       SnapsToDevicePixels="True"
-      RenderOptions.BitmapScalingMode="NearestNeighbor">
-    
+     
+      >
+
     <Page.RenderTransform >
         <TranslateTransform x:Name="PageAxis"/>
     </Page.RenderTransform>
@@ -57,16 +58,16 @@
 
 
         <DataGrid RenderOptions.EdgeMode="Aliased" Grid.Row="4" x:Name="MainDataGrid" Style="{StaticResource DataGridStyle}" RowHeight="40"  ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"  RowStyle="{DynamicResource DataGridRowStyle}" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,10" ItemsSource="{Binding AuthenticationDataCollectionView}">
-            
+
             <DataGrid.Columns>
                 <DataGridTemplateColumn Width="30" CellStyle="{StaticResource NotSelectableColumnStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Border CornerRadius="15" Height="30">
                                 <Border.Background>
-                                    <ImageBrush ImageSource="{Binding Path = LogoPath,IsAsync=True}" Stretch="UniformToFill" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="NearestNeighbor" />
+                                    <ImageBrush ImageSource="{Binding Path = LogoPath,IsAsync=True}" Stretch="UniformToFill" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="LowQuality" />
                                 </Border.Background>
-                            <!--<Image Source="{Binding Path = LogoPath,IsAsync=True}" Stretch="Fill" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="NearestNeighbor" SnapsToDevicePixels="True"/>-->
+                                <!--<Image Source="{Binding Path = LogoPath,IsAsync=True}" Stretch="Fill" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="NearestNeighbor" SnapsToDevicePixels="True"/>-->
                             </Border>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -75,7 +76,7 @@
                     <DataGridTextColumn.CellStyle>
                         <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
                             <EventSetter Event="PreviewMouseDoubleClick" Handler="CopyCellText">
-                               
+
                             </EventSetter>
                         </Style>
                     </DataGridTextColumn.CellStyle>
@@ -87,30 +88,20 @@
                         </Style>
                     </DataGridTextColumn.CellStyle>
                 </DataGridTextColumn>
-                <!--<DataGridTextColumn Header="{x:Static res:Resources.DataGridPassword}" Width="400" Binding="{Binding Path= Password}" >
-                    <DataGridTextColumn.CellStyle>
-                        <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
-                            <EventSetter Event="PreviewMouseDown" Handler="CopyCellText"/>
-                        </Style>
-                    </DataGridTextColumn.CellStyle>
-                </DataGridTextColumn>-->
+
                 <DataGridTemplateColumn Header="{x:Static res:Resources.DataGridPassword}" Width="400">
                     <DataGridTemplateColumn.CellStyle>
                         <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
                             <EventSetter Event="PreviewMouseDoubleClick" Handler="CopyCellText"/>
                         </Style>
-                      
                     </DataGridTemplateColumn.CellStyle>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                           
                             <Grid x:Name="Content">
                                 <TextBlock Text="●●●●●●●" x:Name="HiddenPasswordTextBlock" VerticalAlignment="Center"/>
                                 <TextBlock Text="{Binding Path=Password}" x:Name="RevealedPasswordTextBlock" Visibility="Collapsed" VerticalAlignment="Center" Margin="0,0,30,0"/>
                                 <ToggleButton x:Name="RevealPassword" Checked="RevealPassword_Checked" Unchecked="RevealPassword_Unchecked" Height="25" Width="25" Style="{StaticResource RevealPasswordToggleButtonStyle}"/>
-
                             </Grid>
-
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -118,9 +109,9 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                
-                                    <Button x:Name="PopupMenuButton" Content="&#xE712;" Click="PopupMenuButton_Click" Style="{StaticResource PopupMenuButtonStyle}" Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                               
+
+                                <Button x:Name="PopupMenuButton" Content="&#xE712;" Click="PopupMenuButton_Click" Style="{StaticResource PopupMenuButtonStyle}" Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+
                                 <Popup x:Name="PopupMenu"  PlacementTarget="{Binding ElementName=PopupMenuButton}" Style="{StaticResource PopupMenuStyle}" >
                                     <Border  x:Name="DropDownBorder" Style="{StaticResource PopupMenuDropDownBorderStyle}">
                                         <StackPanel  Background="Transparent">
@@ -133,11 +124,10 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-
             </DataGrid.Columns>
         </DataGrid>
         <Grid  x:Name="ShadowEffectHomePage" Height="700"   Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="5" Style="{StaticResource Shadow}"  />
-        <Grid x:Name="AddEditForm"   Height="600" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource AddEditForm}" Margin="0,0,0,104.2" >
+        <Grid x:Name="AddEditForm" Height="600" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource OverlayFormStyle}" Margin="0,0,0,104.2" >
             <Grid.RenderTransform>
                 <ScaleTransform CenterX="250" CenterY="300" x:Name="FormScailing"/>
             </Grid.RenderTransform>
@@ -293,20 +283,70 @@
                 Style="{StaticResource SubmitButtonStyle}" 
                             HorizontalAlignment="Right"
                             VerticalAlignment="Center"
-                    Click="FormSubmitButton_Click"
+                    Click="AddEditFormSubmitButton_Click"
                 />
             <Button Grid.Column="1"
-                            Name="CloseEditAddForm"
+                Name="CloseEditAddForm"
                 Grid.Row="14" Content="{x:Static res:Resources.FormCancel}"
                             Style="{StaticResource CancelButtonStyle}"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
-                            Click="CloseEditAddForm_Click"
+                            Click="CloseForm_Click"
+                            />
+        </Grid>
+        <Grid Style="{StaticResource OverlayFormStyle}" Name="DeleteForm"  Height="250" Width="500"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Margin="0,0,0,104.2" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="85"/>
+                <ColumnDefinition Width="320"/>
+                <ColumnDefinition Width="85"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="Auto"/>
+               
+                <RowDefinition Height="35"/>
+
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="20*"/>
+                
+            </Grid.RowDefinitions>
+            <Grid.RenderTransform>
+                <ScaleTransform CenterX="250" CenterY="125" />
+            </Grid.RenderTransform>
+            <TextBlock
+                x:Name="DeleteFormHeader"
+                Text="{x:Static res:Resources.DeleteRecordFormHeader}" 
+                   Grid.Row="1" 
+                   Grid.Column="1" Width="320"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="28" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   TextWrapping="Wrap"/>
+            
+            <Button x:Name="ConfirmDeleatingButton" 
+                Grid.Column="1"
+                Grid.Row="3"
+                Content="{x:Static res:Resources.FormSubmit}"
+                Width="160"
+                Height="50"  
+                Style="{StaticResource SubmitButtonStyle}" 
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                    Click="ConfirmDeleatingButton_Click"
+                />
+            <Button Grid.Column="1"
+                Name="CancelRecordDeleatingButton"
+                Grid.Row="3" Content="{x:Static res:Resources.FormCancel}"
+                            Style="{StaticResource CancelButtonStyle}"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Click="CloseForm_Click"
                             />
 
-
         </Grid>
-        <Border x:Name="NotificationBody" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3"  Height="40" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Bottom" Style="{StaticResource NotificationBorderStyle}" Visibility="Collapsed">
+        <Border x:Name="NotificationBody" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3"  Height="40" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Bottom" Style="{StaticResource NotificationBorderStyle}" Visibility="Collapsed"  >
             <Border.RenderTransform>
                 <TranslateTransform x:Name="NotificationTranslateTransform"/>
             </Border.RenderTransform>
