--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/TwoStepVerification.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/TwoStepVerification.xaml
@@ -83,7 +83,6 @@
                 Width="160"
                 Height="50" 
                 Style="{StaticResource SubmitButtonStyle}"
-                Click="Submit_Click"
-                 />
+                Click="Submit_Click"/>
     </Grid>
 </Page>
